--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -46,14 +46,20 @@ runs:
 
     - name: Determine if there are changes
       run: |
-        changes=$(git diff --name-only ${{ inputs.add-paths }})
-        echo "changes: $changes"
-        if [ "$changes" == "" ]; then
-          echo "No changes to commit. Exiting..."
-          echo "check_changes=false" >> $GITHUB_ENV
-        else
-          echo "check_changes=true" >> $GITHUB_ENV
-          echo "Changes detected. Continuing with the workflow."
+        if [ "$(git diff --name-only ${{ inputs.add-paths }}) ]; then
+          git checkout -b feature-branch
+          git add ${{ inputs.add-paths }}
+          git commit -m "Auto-generated changes"
+          git show
+          git push origin feature-branch
+          pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/pulls \
+            -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
+          echo "PR number: $pr_number"
+          echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
+        else 
+          echo "No file changes"
         fi
       shell: bash
 
