--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -52,10 +52,7 @@ runs:
           git commit -m "Auto-generated changes"
           git show
           git push origin feature-branch
-          pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/pulls \
-            -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
+          pr_number=$(gh pr create --base main --head feature-branch --title "The bug is fixed" --body "Everything works again" | jq -r '.number')
           echo "PR number: $pr_number"
           echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
         else 
@@ -63,35 +60,35 @@ runs:
         fi
       shell: bash
 
-    - name: Create branch
-      if: env.check_changes == 'true'
-      run: |
-        git checkout -b feature-branch
-      shell: bash
+    # - name: Create branch
+    #   if: env.check_changes == 'true'
+    #   run: |
+    #     git checkout -b feature-branch
+    #   shell: bash
 
-      # Add your build/test steps here
+    #   # Add your build/test steps here
 
-    - name: Commit and push changes
-      if: env.check_changes == 'true'
-      run: |
-        git add ${{ inputs.add-paths }}
-        git commit -m "Auto-generated changes"
-        git show
-        git push origin feature-branch
-      shell: bash
+    # - name: Commit and push changes
+    #   if: env.check_changes == 'true'
+    #   run: |
+    #     git add ${{ inputs.add-paths }}
+    #     git commit -m "Auto-generated changes"
+    #     git show
+    #     git push origin feature-branch
+    #   shell: bash
 
-    - name: Create Pull Request
-      id: create_pr
-      if: env.check_changes == 'true'
-      run: |
-        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/pulls \
-          -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
+    # - name: Create Pull Request
+    #   id: create_pr
+    #   if: env.check_changes == 'true'
+    #   run: |
+    #     pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
+    #       -H "Accept: application/vnd.github.v3+json" \
+    #       https://api.github.com/repos/${{ github.repository }}/pulls \
+    #       -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
 
-        echo "PR number: $pr_number"
-        echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
-      shell: bash
+    #     echo "PR number: $pr_number"
+    #     echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
+    #   shell: bash
             
     - name: Approve PR
       if: ${{ env.PR_NUMBER }}
