--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -51,7 +51,8 @@ runs:
           git add ${{ inputs.add-paths }}
           git commit -m "Auto-generated changes"
           git show
-          git push origin HEAD
+          git push -u origin HEAD
+          echo "pushed successfully"
           gh pr create --title "The bug is fixed" --head feature-branch --base main --body "Everything works again"
           echo "PR created"
         else 
