--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -53,7 +53,9 @@ runs:
           git show
           git push -u origin feature-branch
           echo "pushed successfully"
-          gh pr create --title "The bug is fixed" --head feature-branch --base main --body "Everything works again"
+          pr_numer=$(gh pr create --title "The bug is fixed" --head feature-branch --base main --body "Everything works again" | jq -r '.number')
+          echo $pr_numer
+          echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
           echo "PR created"
         else 
           echo "No file changes"
