--- a/.github/actions/new_action/action.yml
+++ b/.github/actions/new_action/action.yml
@@ -73,7 +73,7 @@ runs:
         git add ${{ inputs.add-paths }}
         git commit -m "Auto-generated changes"
         git show
-        git push origin feature-branch
+        git push origin new-feature-branch
       shell: bash
 
     - name: Create Pull Request
