--- a/.github/actions/new_action/action.yml
+++ b/.github/actions/new_action/action.yml
@@ -127,9 +127,9 @@ runs:
       run: |
         echo "pr number: ${{ env.PR_NUMBER }}"
         # Replace 'YOUR-ACCESS-TOKEN' with your actual GitHub access token
-          ACCESS_TOKEN=${{ inputs.personal-access-token }}
-          REPO_OWNER="hitesh-temp-account"
-          REPO_NAME="Breach"
+        ACCESS_TOKEN=${{ inputs.personal-access-token }}
+        REPO_OWNER="hitesh-temp-account"
+        REPO_NAME="Breach"
         pr_checks_status=$(curl -s -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/hitesh-temp-account/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status | jq -r '.state')
@@ -140,6 +140,7 @@ runs:
 
           # Get the latest commit SHA
           LATEST_COMMIT_SHA=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/commits" | jq -r '.[0].sha')
+          echo "latest commit sha: $LATEST_COMMIT_SHA"
 
           # Get the state of the latest commit
           COMMIT_STATE=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/statuses/$LATEST_COMMIT_SHA" | jq -r '.[0].state')
