--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -57,7 +57,7 @@ runs:
           echo $pr
           IFS='/' read -ra pr_parts <<< "$pr"
           pr_numer=${pr_parts[${#pr_parts[@]}-1]}
-          echo ""pr number $pr_number"
+          echo "pr number $pr_number"
           echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
           echo "PR created"
         else 
