--- a/.github/actions/new_action/action.yml
+++ b/.github/actions/new_action/action.yml
@@ -143,10 +143,14 @@ runs:
           echo "latest commit sha: $LATEST_COMMIT_SHA"
 
           # Get the state of the latest commit
-          COMMIT_STATE=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/statuses/$LATEST_COMMIT_SHA" | jq -r '.[0].state')
+          COMMIT=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/statuses/$LATEST_COMMIT_SHA")
+          echo "commit: $COMMIT"
+
+          COMMIT_STATE=$(echo "$COMMIT" | jq -r '.[0].state')
 
           echo "State of the latest commit: $COMMIT_STATE"
-          pr_checks_status = $COMMIT_STATE
+          pr_checks_status=$COMMIT_STATE
+          
           # pr_checks_status_api=$(curl -s -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
           #   -H "Accept: application/vnd.github.v3+json" \
           #   https://api.github.com/repos/hitesh-temp-account/${{ github.repository }}/pulls/${{ env.PR_NUMBER }}/commits/${{ github.sha }}/status)
