--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -58,10 +58,9 @@ runs:
           IFS='/' read -ra pr_parts <<< "$pr"
           echo "pr parts are ${pr_parts[@]}"
           echo "length is ${#pr_parts[@]} last element is ${pr_parts[${#pr_parts[@]}-1]}"
-          pr_numer=${pr_parts[${#pr_parts[@]}-1]}
-          echo "pr number $pr_number"
-          echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
+          echo "PR_NUMBER=${pr_parts[${#pr_parts[@]}-1]}" >> $GITHUB_ENV
           echo "PR created"
+          echo "{{ env.PR_NUMBER }}"
         else 
           echo "No file changes"
         fi
@@ -94,18 +93,17 @@ runs:
     #       -H "Accept: application/vnd.github.v3+json" \
     #       https://api.github.com/repos/${{ github.repository }}/pulls \
     #       -d '{"title":"${{ inputs.title }}","head":"feature-branch","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
-
     #     echo "PR number: $pr_number"
     #     echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
     #   shell: bash
-            
-    # - name: Approve PR
-    #   if: ${{ env.PR_NUMBER }}
-    #   run: |
-    #     gh pr review ${{ env.PR_NUMBER }} --approve
-    #   shell: bash
-    #   env:
-    #     GITHUB_TOKEN: ${{ steps.my-app.outputs.token }}
+
+    - name: Approve PR
+      if: ${{ env.PR_NUMBER }}
+      run: |
+        gh pr review ${{ env.PR_NUMBER }} --approve
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ steps.my-app.outputs.token }}
 
     # - name: Add Empty Commit to Auto-Created PR
     #   if: env.PR_NUMBER
@@ -124,13 +122,13 @@ runs:
     #     git push origin feature-branch
     #   shell: bash
 
-    # - name: Turn On PR Auto-Merge
-    #   if: ${{ env.PR_NUMBER }}
-    #   run: |
-    #     gh pr merge --squash --auto --repo ${{ github.repository }} --delete-branch ${{ env.PR_NUMBER }}
-    #   shell: bash
-    #   env:
-    #     GITHUB_TOKEN: ${{ inputs.github-token }}
+    - name: Turn On PR Auto-Merge
+      if: ${{ env.PR_NUMBER }}
+      run: |
+        gh pr merge --squash --auto --repo ${{ github.repository }} --delete-branch ${{ env.PR_NUMBER }}
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ inputs.github-token }}
 
     # - name: Wait for checks to complete
     #   if: ${{ env.PR_NUMBER }}
