--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    paths-ignore: "**/*.md"
+  # pull_request:
+  #   paths-ignore: "**/*.md"
   
 jobs:
   testing:
