--- a/gradle.properties
+++ b/gradle.properties
@@ -8,31 +8,4 @@ android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-VERSION_NAME=4.1-gaga
+VERSION_NAME=1.1-alpha
