--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,5 @@ android.useAndroidX=true
 # Enables namespacing of each's R class so that its R class inclu
 android.nonTransitiveRClass=false
 
-VERSION_NAME=1.1-alpha
+
+VERSION_NAME=1.1-gama
