--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -117,76 +117,87 @@ jobs:
           sed -i "s/properties#L[0-9]*)/properties#L$current_line\)/" README.md
           cat README.md
 
-      # - name: Create PR
-      #   id: create-pr
-      #   uses: peter-evans/create-pull-request@v5
-      #   with:
-      #     base: main
-      #     branch: github-actions/readme-update
-      #     delete-branch: true
-      #     author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
-      #     title: 'Update readme'
-      #     body: ${{ env.COMMIT_MESSAGE }}
-      #     commit-message: ${{ env.COMMIT_MESSAGE }}
-      #     token: ${{ env.APP_TOKEN }}
-      #     add-paths: README.md
-            
-      # - name: pr number
-      #   run: | 
-      #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
-
-
-      - name: Create, Approve and Merge PR
-        uses: ./.github/actions/new_action
+      - name: Create PR
+        id: create-pr
+        uses: peter-evans/create-pull-request@v5
         with:
-          title: 'custom title'
-          commit-message: 'test commit message'
-          app-id: ${{ secrets.ALTERNATE_APP_ID }}
-          app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          personal-access-token: ${{ secrets.ACCESS_TOKEN }}
+          base: main
+          branch: github-actions/readme-update
+          delete-branch: true
+          author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
+          title: 'Update readme'
+          body: ${{ env.COMMIT_MESSAGE }}
+          commit-message: ${{ env.COMMIT_MESSAGE }}
+          token: ${{ env.APP_TOKEN }}
           add-paths: README.md
+            
+      - name: pr number
+        run: | 
+          echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
 
-      # - name: Approve PR
-      #   if: |
-      #      env.version_change == 'true' ||
-      #      env.VERSION_LINE_CHANGED == 'true'
-      #   run: |
-      #      gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
-      #      echo "approved"
-      #   env:
-      #      GITHUB_TOKEN: ${{ env.ALTERNATE_APP_TOKEN }}
 
-      # - name: Turn On PR Auto-Merge
-      #   id: auto-merge
-      #   if: |
-      #     env.version_change == 'true' ||
-      #     env.VERSION_LINE_CHANGED == 'true'
-      #   run: >
-      #     gh pr merge --squash --auto --repo
-      #     ${{ github.repository }} --delete-branch
-      #     ${{ steps.create-pr.outputs.pull-request-number }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Create, Approve and Merge PR
+      #   uses: ./.github/actions/new_action
+      #   with:
+      #     title: 'custom title'
+      #     commit-message: 'test commit message'
+      #     app-id: ${{ secrets.ALTERNATE_APP_ID }}
+      #     app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     personal-access-token: ${{ secrets.ACCESS_TOKEN }}
+      #     add-paths: README.md
 
-      # - name: Print output of auto merge
-      #   run: |
-      #     echo "output: ${{ steps.auto-merge.outputs.success }}"
+      - name: Approve PR
+        if: |
+           env.version_change == 'true' ||
+           env.VERSION_LINE_CHANGED == 'true'
+        run: |
+           gh pr review ${{ steps.create-pr.outputs.pull-request-number }} --approve
+           echo "approved"
+        env:
+           GITHUB_TOKEN: ${{ env.ALTERNATE_APP_TOKEN }}
 
-      # - name: Wait for checks to complete
-      #   if: |
-      #     env.version_change == 'true' ||
-      #     env.VERSION_LINE_CHANGED == 'true'
-      #   run: gh api -X GET /repos/${{ github.repository }}/commits/${{ github.sha }}/check-runs --silent
-      #   id: wait-for-checks
-      #   env:
-      #     GH_TOKEN: ${{ github.token }}
+      - name: Turn On PR Auto-Merge
+        id: auto-merge
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
+        run: >
+          gh pr merge --squash --auto --repo
+          ${{ github.repository }} --delete-branch
+          ${{ steps.create-pr.outputs.pull-request-number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Delete branch
-      #   if: |
-      #     env.version_change == 'true' ||
-      #     env.VERSION_LINE_CHANGED == 'true' &&
-      #     steps.wait-for-checks.outputs.status == 'completed'
-      #   run: |
-      #     git push origin --delete github-actions/readme-update
+      - name: Print output of auto merge
+        run: |
+          echo "output: ${{ steps.auto-merge.outputs.success }}"
+
+      - name: Wait for checks to complete
+        if: ${{ steps.create-pr.outputs.pull-request-number }}
+        run: |
+          echo "pr number: ${{ steps.create-pr.outputs.pull-request-number }}"
+          # Replace 'YOUR-ACCESS-TOKEN' with your actual GitHub access token
+          ACCESS_TOKEN=${{ inputs.personal-access-token }}
+          REPO_OWNER="hitesh-temp-account"
+          REPO_NAME="Breach"
+          pr_merged=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}" | jq -r '.merged')
+          echo "status: $pr_merged"
+
+          while [ "$pr_merged" != "true" ]; do
+            sleep 5
+          
+            # Get PR info
+            PR=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}")
+            echo "pr: $PR"
+            pr_merged=$(echo "$PR" | jq -r '.merged')
+            echo "State of the PR: $pr_merged"
+          done
+
+          if [ "$pr_merged" == "true" ]; then
+            echo "PR checks passed. Deleting branch."
+            git push origin --delete new-feature-branch
+          else
+            echo "PR checks failed. Keeping the branch."
+          fi
 
