--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -181,8 +181,9 @@ jobs:
           ACCESS_TOKEN=${{ env.APP_TOKEN }}
           REPO_OWNER="hitesh-temp-account"
           REPO_NAME="Breach"
-          pr_merged=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}" | jq -r '.merged')
-          echo "status: $pr_merged"
+          pr_merged = "false"
+          # pr_merged=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}" | jq -r '.merged')
+          # echo "status: $pr_merged"
 
           while [ "$pr_merged" != "true" ]; do
             sleep 5
