--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -170,8 +170,8 @@ jobs:
         with:
           title: 'custom title'
           commit-message: 'test commit message'
-          create-pr-app-id: ${{ secrets.CREATE_APP_ID }}
-          create-pr-app-private-key: ${{ secrets.CREATE_APP_PRIVATE_KEY }}
+          create-pr-app-id: ${{ secrets.APP_ID }}
+          create-pr-app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
           app-id: ${{ secrets.ALTERNATE_APP_ID }}
           app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
