--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -173,34 +173,34 @@ jobs:
         run: |
           echo "output: ${{ steps.auto-merge.outputs.success }}"
 
-      - name: Wait for checks to complete
-        if: ${{ steps.create-pr.outputs.pull-request-number }}
-        run: |
-          echo "pr number: ${{ steps.create-pr.outputs.pull-request-number }}"
-          # Replace 'YOUR-ACCESS-TOKEN' with your actual GitHub access token
-          ACCESS_TOKEN=${{ env.APP_TOKEN }}
-          REPO_OWNER="hitesh-temp-account"
-          REPO_NAME="Breach"
-          pr_merged="false"
-          # pr_merged=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}" | jq -r '.merged')
-          # echo "status: $pr_merged"
-          timer=0
+      # - name: Wait for checks to complete
+      #   if: ${{ steps.create-pr.outputs.pull-request-number }}
+      #   run: |
+      #     echo "pr number: ${{ steps.create-pr.outputs.pull-request-number }}"
+      #     # Replace 'YOUR-ACCESS-TOKEN' with your actual GitHub access token
+      #     ACCESS_TOKEN=${{ env.APP_TOKEN }}
+      #     REPO_OWNER="hitesh-temp-account"
+      #     REPO_NAME="Breach"
+      #     pr_merged="false"
+      #     # pr_merged=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}" | jq -r '.merged')
+      #     # echo "status: $pr_merged"
+      #     timer=0
 
-          while [[ "$pr_merged" != "true" && $timer -lt 9 ]]; do
-            sleep 5
+      #     while [[ "$pr_merged" != "true" && $timer -lt 9 ]]; do
+      #       sleep 5
           
-            # Get PR info
-            PR=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}")
-            echo "pr: $PR"
-            pr_merged=$(echo "$PR" | jq -r '.merged')
-            echo "State of the PR: $pr_merged"
-            timer=$((timer+5))
-          done
+      #       # Get PR info
+      #       PR=$(curl -s -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/pulls/${{ steps.create-pr.outputs.pull-request-number }}")
+      #       echo "pr: $PR"
+      #       pr_merged=$(echo "$PR" | jq -r '.merged')
+      #       echo "State of the PR: $pr_merged"
+      #       timer=$((timer+5))
+      #     done
 
-          if [ "$pr_merged" == "true" ]; then
-            echo "PR checks passed. Deleting branch."
-            git push origin --delete github-actions/readme-update
-          else
-            echo "PR checks failed. Keeping the branch."
-          fi
+      #     if [ "$pr_merged" == "true" ]; then
+      #       echo "PR checks passed. Deleting branch."
+      #       git push origin --delete github-actions/readme-update
+      #     else
+      #       echo "PR checks failed. Keeping the branch."
+      #     fi
 
