--- a/.github/actions/new_action/action.yml
+++ b/.github/actions/new_action/action.yml
@@ -84,7 +84,7 @@ runs:
         git add ${{ inputs.add-paths }}
         git commit -m "Auto-generated changes"
         git show
-        git push origin new-feature-branch-${{ env.RANDOM_NUMBER }
+        git push origin new-feature-branch-${{ env.RANDOM_NUMBER }}
       shell: bash
 
     - name: Create Pull Request
@@ -94,7 +94,7 @@ runs:
         pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
-          -d '{"title":"${{ inputs.title }}","head":"new-feature-branch-${{ env.RANDOM_NUMBER }","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
+          -d '{"title":"${{ inputs.title }}","head":"new-feature-branch-${{ env.RANDOM_NUMBER }}","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
 
         echo "PR number: $pr_number"
         echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
