--- a/.github/actions/new_action/action.yml
+++ b/.github/actions/new_action/action.yml
@@ -8,17 +8,20 @@ inputs:
   commit-message:
     description: 'commit message'
     required: true
-  app-id:
-    description: 'github app id'
+  pr-creation-app-id:
+    description: 'github app id for pr creation'
     required: true
-  app-private-key:
-    description: 'github app private key'
+  pr-creation-app-private-key:
+    description: 'github app private keyfor pr creation'
+    required: true
+  pr-approval-app-id:
+    description: 'github app id for pr approval'
+    required: true
+  pr-approval-app-private-key:
+    description: 'github app private keyfor pr approval'
     required: true
   github-token:
     description: 'github token'
-    required: true
-  personal-access-token:
-    desccription: 'personal access token to create PR'
     required: true
   add-paths:
     description: 'path of the required changes'
@@ -31,12 +34,19 @@ defaults:
 runs:
   using: 'composite'
   steps:
-    - name: my-app-install token
-      id: my-app
+    - name: my-app-install token for create Pr
+      id: my-app-create
       uses: actions/create-github-app-token@v1
       with:
-        app-id: ${{ inputs.app-id }}
-        private-key: ${{ inputs.app-private-key }}
+        app-id: ${{ inputs.pr-creation-app-id }}
+        private-key: ${{ inputs.pr-creation-private-key }}
+
+    - name: my-app-install token for approve PR
+      id: my-app-approve
+      uses: actions/create-github-app-token@v1
+      with:
+        app-id: ${{ inputs.pr-approval-app-id }}
+        private-key: ${{ inputs.pr-approval-private-key }}
 
     - name: Set up Git
       run: |
@@ -44,7 +54,7 @@ runs:
         git config --global user.email "<${{ github.actor }}@linkedin.com>"
       shell: bash
 
-    - name: create PR
+    - name: check changes
       run: |
         changes=$(git diff --name-only ${{ inputs.add-paths }})
         echo "changes: $changes"
@@ -60,12 +70,13 @@ runs:
         GH_TOKEN: ${{ github.token }}
 
     - name: Generate 8-digit random number
-      id: random-number
+      if: env.check_changes == 'true'
       run: |
         echo "RANDOM_NUMBER=$(shuf -i 10000000-99999999 -n 1)" >> $GITHUB_ENV
       shell: bash
 
     - name: Display random number
+      if: env.check_changes == 'true'
       run: |
         echo "Random Number: ${{ env.RANDOM_NUMBER }}"
       shell: bash
@@ -91,7 +102,7 @@ runs:
       id: create_pr
       if: env.check_changes == 'true'
       run: |
-        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ inputs.personal-access-token }}" \
+        pr_number=$(curl -X POST -H "Authorization: Bearer ${{ steps.my-app-create.outputs.token }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/pulls \
           -d '{"title":"${{ inputs.title }}","head":"new-feature-branch-${{ env.RANDOM_NUMBER }}","base":"main","body":"${{ inputs.commit-message }}"}' | jq -r '.number')
@@ -106,7 +117,7 @@ runs:
         gh pr review ${{ env.PR_NUMBER }} --approve
       shell: bash
       env:
-        GITHUB_TOKEN: ${{ steps.my-app.outputs.token }}
+        GITHUB_TOKEN: ${{ steps.my-app-approve.outputs.token }}
 
     # - name: Add Empty Commit to Auto-Created PR
     #   if: env.PR_NUMBER
