--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -69,7 +69,7 @@ jobs:
 
             # Update the color based on the percentage
             color=""
-            if [ $(echo "$new_percentage < 35.00" | bc -l) ]; then
+            if [ $new_percentage < 35.00 ]; then
               color="red"
               echo "updated to red"
             else
