--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -21,19 +21,6 @@ jobs:
         with:
           java-version: 17
 
-      # - name: Grant execute permission for gradlew
-      #   run: chmod +x gradlew
-
-      # - name: Run Module Coverage
-      #   run: ./gradlew debugCoverage --continue
-
-      # - name: print csv files
-      #   id: csv_files
-      #   run: |
-      #     original_string=$(find . -type f -name "debugCoverage.csv" \( -path "*app*" -o -path "*paymentGateway*" \))
-      #     modified_string=$(echo "$original_string" | tr ' ' '\n')
-      #     echo "CSV=$modified_string" >> $GITHUB_ENV
-
       - name: Get Old Percentage
         id: get_old_percentage
         run: |
@@ -58,16 +45,13 @@ jobs:
 
       - name: Update Badge
         run: |
-          # Replace the coverage percentage
           new_percentage="${{ env.NEW }}"
-
-          # Compare old and new percentages
           old_percentage="${{ env.OLD }}"
+          echo "COVERAGE_CHANGED=false" >> $GITHUB_ENV
           if [ "$old_percentage" != "$new_percentage" ]; then
+            echo "COVERAGE_CHANGED=true" >> $GITHUB_ENV
             sed -i "s/coverage-$old_percentage\%25/coverage-$new_percentage\%25/" README.md
             echo "updated the percentage: $new_percentage"
-
-            # Update the color based on the percentage
             color=""
             if [ $(echo "$new_percentage < 35.00" | bc -l) ]; then
               color="red"
@@ -81,91 +65,8 @@ jobs:
           fi
           git status
       
-      # - name: Generate JaCoCo Badge
-      #   id: jacoco
-      #   uses: cicirello/jacoco-badge-generator@v2
-      #   with:
-      #     jacoco-csv-file: >
-      #       ${{ env.CSV }}
-
-      # - name: Log coverage percentage
-      #   run: |
-      #     echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
-      #     echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
-
-      # - name: Set up Git
-      #   run: |
-      #     git config --global user.name "${{ github.actor }}"
-      #     git config --global user.email "<${{ github.actor }}@linkedin.com>"
-
-      # - name: Determine if there are changes
-      #   run: |
-      #     changes=$(git diff --name-only */jacoco.svg)
-      #     if [ -z "$changes" ]; then
-      #       echo "No changes to commit. Exiting..."
-      #       echo "check_changes=false" >> $GITHUB_ENV
-      #     else
-      #       echo "check_changes=true" >> $GITHUB_ENV
-      #       echo "Changes detected. Continuing with the workflow."
-      #     fi
-
-      # - name: Create branch
-      #   if: env.check_changes == 'true'
-      #   run: |
-      #     git checkout -b feature-branch
-
-      # # Add your build/test steps here
-
-      # - name: Commit and push changes
-      #   if: env.check_changes == 'true'
-      #   run: |
-      #     git add */jacoco.svg
-      #     git commit -m "Auto-generated changes"
-      #     git push origin feature-branch
-
-      # - name: Create Pull Request
-      #   id: create_pr
-      #   if: env.check_changes == 'true'
-      #   run: |
-      #     pr_number=$(curl -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-      #       -H "Accept: application/vnd.github.v3+json" \
-      #       https://api.github.com/repos/${{ github.repository }}/pulls \
-      #       -d '{"title":"Auto-generated Pull Request","head":"feature-branch","base":"main","body":"This PR is automatically generated."}' | jq -r '.number')
-
-      #     echo "PR number: $pr_number"
-      #     echo "PR_NUMBER=$pr_number" >> $GITHUB_ENV
-
-
-      # - name: my-app-install token
-      #   id: my-app
-      #   uses: actions/create-github-app-token@v1
-      #   with:
-      #     app-id: ${{ secrets.ALTERNATE_APP_ID }}
-      #     private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
-
-      # - name: print app token
-      #   run: |
-      #     echo "APP_TOKEN=${{ steps.my-app.outputs.token }}" >> $GITHUB_ENV
-
-      # - name: Create PR
-      #   id: create-pr
-      #   uses: peter-evans/create-pull-request@v5
-      #   with:
-      #     base: main
-      #     branch: github-actions/readme-update
-      #     delete-branch: true
-      #     author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
-      #     title: 'Update readme'
-      #     body: ${{ env.COMMIT_MESSAGE }}
-      #     commit-message: ${{ env.COMMIT_MESSAGE }}
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     add-paths: README.md
-            
-      # - name: pr number
-      #   run: | 
-      #     echo "pr number : ${{ steps.create-pr.outputs.pull-request-number }}"
-
       - name: Create, Approve and Merge PR
+        if: env.COVERAGE_CHANGED == true
         uses: ./.github/actions/create_approve_and_merge
         with:
           title: 'custom title'
