--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -137,6 +137,9 @@ jobs:
 
 
       - name: Create, Approve and Merge PR
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
         uses: ./.github/actions/new_action
         with:
           title: 'custom title'
@@ -146,7 +149,6 @@ jobs:
           pr-approval-app-id: ${{ secrets.APP_ID }}
           pr-approval-app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          add-paths: README.md
 
       # - name: Approve PR
       #   if: |
