--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -26,9 +26,6 @@ inputs:
   personal-access-token:
     desccription: 'personal access token to create PR'
     required: true
-  add-paths:
-    description: 'path of the required changes'
-    required: false
 
 defaults:
   run:
@@ -54,7 +51,7 @@ runs:
       run: |
         random_number=$(shuf -i 10000000-99999999 -n 1)
         git checkout -b feature-branch-$random_number
-        git add ${{ inputs.add-paths }}
+        git add README.md
         git commit -m "${{ inputs.commit-message }}"
         git show
         git push origin feature-branch-$random_number
