--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -50,8 +50,6 @@ jobs:
           echo "COVERAGE_CHANGED=false" >> $GITHUB_ENV
           if [ "$old_percentage" != "$new_percentage" ]; then
             echo "COVERAGE_CHANGED=true" >> $GITHUB_ENV
-            sed -i "s/coverage-$old_percentage\%25/coverage-$new_percentage\%25/" README.md
-            echo "updated the percentage: $new_percentage"
             color=""
             if [ $(echo "$new_percentage < 35.00" | bc -l) ]; then
               color="red"
@@ -60,7 +58,7 @@ jobs:
               echo "updated to green"
               color="green"
             fi
-            sed -i "s/%25-[^.]*.svg)/%25-$color.svg)/" README.md
+            sed -i "s/coverage-$old_percentage\%25-[^.]*.svg)/coverage-$new_percentage\%25-$color.svg)/" README.md
             cat README.md
           fi
           git status
